--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,16 @@ img {
 
 body {
   font: 16px sans-serif;
+  background-repeat: repeat;
 }
 
 .header .header__title {
   text-align: center;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 25%;
+  margin: 0;
+  padding: 60px;
 }
 
 .section {
@@ -16,6 +22,14 @@ body {
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+}
+
+.section__card {
+  width: 200px;
+  border: 1px solid black;
+  background-color: #fff;
+  border-radius: 2px;
+  padding: 10px;
 }
 
 .section__decor {
@@ -28,6 +42,7 @@ body {
 }
 
 .card__list {
+  height: 150px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -35,6 +50,12 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  overflow: scroll;
+  background-color: white;
+}
+
+.card__avatar {
+  margin-bottom: 10px;
 }
 
 .addInput {
@@ -48,6 +69,8 @@ body {
 }
 
 .addButton {
+  border-radius: 2px;
+  padding: 20px;
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
