--- a/style.scss
+++ b/style.scss
@@ -4,17 +4,34 @@ img {
 
 body {
     font: 16px sans-serif;
+    // background-color: black;
+    // background-image: url('../img/background.png');
+    background-repeat: repeat;
 }
 
 .header {
     .header__title {
         text-align: center;
+        // background-image: url(../img/decor.png);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: 25%;
+        margin: 0;
+        padding: 60px;
     }
 }
 
 .section {
     display: flex;
     justify-content: space-around;
+
+    &__card {
+        width: 200px;
+        border: 1px solid black;
+        background-color: #fff;
+        border-radius: 2px;
+        padding: 10px;
+    }
 
     &__decor {
         display: flex;
@@ -24,8 +41,14 @@ body {
 
 .card {
     &__list {
+        height: 150px;
         display: flex;
         flex-direction: column;
+        overflow: scroll;
+        background-color: white;
+    }
+    &__avatar {
+        margin-bottom: 10px;
     }
 }
 
@@ -38,6 +61,8 @@ body {
 }
 
 .addButton {
+    border-radius: 2px;
+    padding: 20px;
     appearance: none;
     display: block;
     margin-left: auto;
@@ -45,4 +70,5 @@ body {
     border: 0;
     font-weight: bold;
     text-transform: uppercase;
+
 }
